--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
-  }
+  },
+  "homepage": "https://pwg26.github.io/my_quest_with_react/"
 }
