--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://pwg26.github.io/my_quest_with_react/",
   "name": "woah",
   "version": "0.1.0",
   "private": true,
@@ -10,17 +11,20 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-bootstrap-dropdown-menu": "^1.1.23",
+    "gh-pages": "^3.1.0",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +46,6 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
-  },
-  "homepage": "https://pwg26.github.io/my_quest_with_react/"
+  }
+  
 }
